# azahar

./: CMakeLists.txt
.ci/: docker.sh
.github/workflows/: build.yml
CMakeModules/: BundleTarget.cmake  DownloadExternals.cmake
src/: CMakeLists.txt
src/android/app/src/main/java/org/citra/citra_emu/utils/: DocumentsTree.kt
src/citra_meta/: main.cpp
src/citra_qt/: CMakeLists.txt  bootmanager.cpp  game_list.cpp  qt_swizzle.mm
src/citra_qt/configuration/: config.cpp  configure_debug.cpp  configure_debug.ui
src/citra_room/: citra_room.cpp  citra_room.h
src/citra_room_launcher/: CMakeLists.txt  citra_room_launcher.c
src/common/: android_storage.cpp  file_util.cpp  settings.h
src/installer/: citra.nsi
